Fix using deprecated method and log if it fail